# just-stash-it

./: .dockerignore  .gitignore  Dockerfile  LICENSE.MD  compose.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: action.yml
nginx/: default.conf  nginx.Dockerfile
src/: main.py  schemas.py
src/static/: 404.html  index.html  paste.html
src/static/css/: output.css  style.css
src/static/js/: config.js  index.js  modal.js  paste.js
tests/: conftest.py  test_main.py
